@@ -23,16 +23,17 @@ repositories {
 }
 
 dependencies {
-    implementation ('org.apache.commons:commons-dbcp2:2.10.0') {
+    implementation ('org.apache.commons:commons-dbcp2:2.11.0') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
     implementation 'commons-net:commons-net:3.10.0'
-    implementation 'org.apache.httpcomponents:httpclient:4.5.14'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.7.9.7'
-    implementation 'org.apache.logging.log4j:log4j-core:2.21.0'
-    implementation 'com.oracle.database.jdbc:ojdbc10:19.21.0.0'
-    implementation 'org.springframework:spring-jdbc:6.1.3'
-
+    implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
+        exclude group: 'commons-logging', module: 'commons-logging'
+    }
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.8.11.6'
+    implementation 'org.apache.logging.log4j:log4j-core:2.21.1'
+    implementation 'com.oracle.database.jdbc:ojdbc10:19.22.0.0'
+    implementation 'org.springframework:spring-jdbc:6.1.4'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
