@@ -1,13 +1,14 @@
 <!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
 <beans>
 	<bean id="manager" class="edu.mcw.rgd.pipelines.pharmgkb.Manager">
-        <property name="version" value="PharmGKB Pipeline  -- build Apr 18, 2024" />
+        <property name="version" value="PharmGKB Pipeline  -- build Apr 19, 2024" />
         <property name="dao" ref="dao" />
         <property name="preProcessor" ref="preProcessor" />
         <property name="qcProcessor" ref="qcProcessor" />
         <property name="staleIdsDeleteThreshold" value="5%" />
         <property name="pipelineName" value="PharmGKB" />
         <property name="multithreadQC" value="true" />
+        <property name="cacheQCData" value="false" />
 	</bean>
 	
     <bean id="dao" class="edu.mcw.rgd.pipelines.pharmgkb.Dao">
