@@ -1,3 +1,6 @@
+Apr 19, 2024
+  added config option to turn on/off preloading and caching of some data
+
 Apr 18, 2024
   added config option to turn on/off parallel processing
 
